--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if signed_in? %>
+    <%= current_user.email %>
+    <%= link_to "Sign out", sign_out_path, :method => :delete %>
+  <% else %>
+    <%= link_to "Sign in", sign_in_path %>
+  <% end %>
 
-<%= yield %>
+  <% flash.each do |key, value| -%>
+    <div class="flash <%= key %>"><%= value %></div>
+  <% end -%>
+
+  <%= yield %>
 
 </body>
 </html>
