--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -7,6 +7,6 @@
 <h2>Your Discussions</h2>
 <ul id="discussions">
   <% @discussions.each do |discussion| %>
-    <li><%= link_to discussion.name, discussion %></li>
+    <li><%= link_to discussion.name, discussion %> <%= time_ago_in_words(discussion.created_at) %> ago</li>
   <% end %>
 </ul>
