--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -6,7 +6,7 @@
   <%= render @messages %>
 </ul>
 
-<%= form_for @message, url: discussion_messages_path(@discussion) do |f| %>
+<%= form_for @message, url: discussion_messages_path(@discussion), remote: true do |f| %>
   <%= f.text_field :content %>
   <%= f.submit "Send" %>
 <% end %>
