--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,12 +1,11 @@
+<% unless current_user.email %>
+  <%= form_for Guest.new, url: discussion_guests_path(@discussion) do |f| %>
+    <%= f.text_field :email %>
+    <%= f.submit 'Join discussion' %>
+  <% end %>
+<% end %>
+
 <h2 data-role="discussion-name"><%= @discussion.name %></h2>
 <%= render @discussion.subject %>
 
-
-<ul id="chat">
-  <%= render @messages %>
-</ul>
-
-<%= form_for @message, url: discussion_messages_path(@discussion), remote: true do |f| %>
-  <%= f.text_field :content %>
-  <%= f.submit "Send" %>
-<% end %>
+<%= render 'chat' %>
