--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,22 +3,37 @@
 <head>
   <title>Discepto</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if signed_in? %>
-    <%= current_user.email %>
-    <%= link_to "Sign out", sign_out_path, :method => :delete %>
-  <% else %>
-    <%= link_to "Sign in", sign_in_path %>
-  <% end %>
+  <div class='navbar navbar-fixed-top'>
+    <div class='navbar-inner'>
+      <div class='container-fluid'>
+        <%= link_to 'logo', root_path, class: 'brand' %>
+        <ul class='nav pull-right'>
+          <% if signed_in? %>
+            <li class='dropdown'>
+              <a class='dropdown-toggle' data-toggle='dropdown' href='#'><%= current_user.email %></a>
+              <ul class='dropdown-menu'>
+                <li><%= link_to "Sign out", sign_out_path, :method => :delete %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Sign in", sign_in_path %></li>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <% flash.each do |key, value| -%>
-    <div class="flash <%= key %>"><%= value %></div>
-  <% end -%>
+  <div class='container-fluid'>
+    <% flash.each do |key, value| -%>
+      <div class="flash <%= key %>"><%= value %></div>
+    <% end -%>
 
-  <%= yield %>
+    <%= yield %>
+  </div>
 
+  <%= javascript_include_tag "application" %>
 </body>
 </html>
