Bold message author

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,1 @@
-<li><%= message.user_name %>: <%= message.content %></li>
+<li><strong><%= message.user_name %>:</strong> <%= message.content %></li>
