--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,6 +1,8 @@
 <div class='row'>
   <div class='span9'>
     <%= form_for @image_subject do |form| %>
+      <%= render "shared/error_messages", :object => @image_subject %>
+
       <div class='control-group'>
         <%= text_field_tag 'discussion_name', nil, placeholder: "Name your discussion" %>
       </div>
