--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,35 +1,7 @@
 <div class='row'>
   <div class='span9'>
-    <%= form_for @image_subject do |form| %>
-      <%= render "shared/error_messages", :object => @image_subject %>
-
-      <div class='control-group'>
-        <%= text_field_tag 'discussion_name', nil, placeholder: "Name your discussion" %>
-      </div>
-      <div class='control-group'>
-        <%= form.file_field :image %>
-      </div>
-      <div class='form-actions'>
-        <%= form.submit 'Discuss', class: 'btn btn-primary' %>
-      </div>
-    <% end %>
-
-    <%= form_for @text_subject do |form| %>
-      <%= render "shared/error_messages", :object => @text_subject %>
-
-      <div class='control-group'>
-        <%= text_field_tag 'discussion_name', nil, placeholder: "Name your discussion" %>
-      </div>
-      <div class='control-group'>
-        <%= form.select :language, TextSubject.available_languages %>
-      </div>
-      <div class='control-group'>
-        <%= form.text_area :content %>
-      </div>
-      <div class='form-actions'>
-        <%= form.submit 'Discuss', class: 'btn btn-primary' %>
-      </div>
-    <% end %>
+    <%= render 'image_subjects/form' %>
+    <%= render 'text_subjects/form' %>
   </div>
 
   <div class='span3'>
