--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,6 +1,7 @@
 <div class='row'>
   <div class='span9'>
     <h2 data-role="discussion-name"><%= @discussion.name %></h2>
+    <%= link_to 'update', edit_discussion_path(@discussion) %>
     <%= render @discussion.subject %>
   </div>
 
