--- a/app/views/text_subjects/_form_fields.html.erb
+++ b/app/views/text_subjects/_form_fields.html.erb
@@ -1,5 +1,5 @@
 <div class='control-group'>
-  <%= form.select :language, TextSubject.available_languages %>
+  <%= form.select :language, TextSubject::AVAILABLE_LANGUAGES %>
 </div>
 
 <div class='control-group'>
