Removed bootstrap; Added very basic layout Added Flutie and Bourbon gems Restructured the CSS/SASS Restructured some HTML/ERB to fit with styles

--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,12 +1,9 @@
-<div class='row'>
-  <div class='span9'>
-    <h2 data-role="discussion-name"><%= @discussion.name %></h2>
-    <%= link_to 'update', edit_discussion_path(@discussion) %>
-    <p>Share this link to begin a discussion: <%= link_to discussion_url(@discussion), @discussion %></p>
-    <%= render @discussion.subject %>
-  </div>
+<section class='view'>
+  <h2 data-role="discussion-name"><%= @discussion.name %></h2>
+  <%= link_to 'update', edit_discussion_path(@discussion) %>
+  <%= render @discussion.subject %>
+</section>
 
-  <div class='span3'>
-    <%= render 'chat' %>
-  </div>
-</div>
+<section class='chat'>
+  <%= render 'chat' %>
+</section>
