--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,15 +1,15 @@
-<div class='row'>
-  <div class='span9'>
-    <%= render 'image_subjects/form' %>
-    <%= render 'text_subjects/form' %>
-  </div>
+<section class='file'>
+  <%= render 'image_subjects/form' %>
+</section>
+<section class="paste">
+  <%= render 'text_subjects/form' %>
+</section>
 
-  <div class='span3'>
-    <h2>Your Discussions</h2>
-    <ul id="discussions">
-      <% @discussions.each do |discussion| %>
-        <li><%= link_to discussion.name, discussion %> <%= time_ago_in_words(discussion.created_at) %> ago</li>
-      <% end %>
-    </ul>
-  </div>
-</div>
+<section class='history'>
+  <h2>Your Discussions</h2>
+  <ul id="discussions">
+    <% @discussions.each do |discussion| %>
+      <li><%= link_to discussion.name, discussion %> <%= time_ago_in_words(discussion.created_at) %> ago</li>
+    <% end %>
+  </ul>
+</section>
