Discussion page wireframed

--- a/app/assets/stylesheets/_soapbox.css.scss
+++ b/app/assets/stylesheets/_soapbox.css.scss
@@ -66,7 +66,8 @@ select {
 }
 
 button,
-input[type="submit"] {
+input[type="submit"],
+a.button {
   @include button(simple, #fafafa);
 
   // Button Overrides
