--- a/app/assets/stylesheets/solarized_dark.css
+++ b/app/assets/stylesheets/solarized_dark.css
@@ -5,7 +5,7 @@ Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmai
 */
 
 pre code {
-  display: block; padding: 0.5em;
+  display: block;
   background: #002b36; color: #839496;
 }
 
