--- a/app/views/text_subjects/_text_subject.html.erb
+++ b/app/views/text_subjects/_text_subject.html.erb
@@ -1,6 +1,4 @@
-<pre class='text-content'>
-<code class='language-<%= text_subject.language.downcase %>'><%= text_subject.content %></code>
-</pre>
+<pre class='text-content'><code class='language-<%= text_subject.language.downcase %>'><%= text_subject.content %></code></pre>
 
 <% content_for :javascript do %>
   <script>
