--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+$gw-column: 65px;
+$gw-gutter: 20px;
+
 $fg-column: 65px;
 $fg-gutter: 20px;
 $fg-max-columns: 12;
+
+$header-height: 50px;
+
+$font-size-base: 16px;
+$font-size-large: 20px;
+$font-size-huge: 30px;
