--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -1,14 +1,64 @@
 body.discussions {
   div.main-wrap {
     section.view {
-      float: left;
-      margin-left: flex-gutter();
+      background: #D3D3D3;
+      @include box-sizing(border-box);
+      padding: 20px flex-gutter();
+      @include position(fixed, $header-height flex-grid(8) 0px 0px);
       width: flex-grid(8);
+
+      h2 {
+        color: #333;
+        margin-bottom: 10px;
+      }
+
+      pre {
+        $adjusted-flex-gutter: flex-gutter() * 1.5; // to compensate for the fact that it's inside a flex-grid(8) box
+        margin: 20px 0 0 0;
+        overflow: scroll;
+        @include position(absolute, 80px $adjusted-flex-gutter 20px $adjusted-flex-gutter);
+        
+        code {
+          margin: 0;
+          padding: 10px;
+        }
+      }
     }
 
     section.chat {
-      float: left;
-      width: flex-grid(4);
+      background: #ddd;
+      @include position(fixed, $header-height 0px 0px flex-grid(8));
+
+      div#chat-container {
+        @include position(absolute, 0px 0px 0px 0px);
+        overflow: scroll;
+
+        ul#messages {
+          list-style: none;
+          margin: 0;
+          padding: 10px;
+          padding-bottom: 126px;
+
+          li {
+            border-radius: 4px;
+            color: #333;
+            margin: 3px 0 0 0;
+            padding: 1px 5px;
+            text-shadow: 0px 1px white;
+          }
+        }
+
+        form {
+          background: #eee;
+          padding: 10px;
+          @include position(fixed, 0 0px 0px flex-grid(8));
+
+          textarea {
+            height: 5em;
+            width: 100%;
+          }
+        }
+      }
     }
   }
 }
