--- a/app/views/discussions/_chat.html.erb
+++ b/app/views/discussions/_chat.html.erb
@@ -26,7 +26,9 @@
       $('#message_content').keypress(function(e) {
         if(e.which == 13) {
           e.preventDefault();
-          $('form#new_message').submit();
+          if(!$('#message_content').val().match(/^\s*$/)) {
+            $('form#new_message').submit();
+          }
           return false;
         }
       });
