Styled discussions page Tried to fix a of the test

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,9 +1,16 @@
 <section class='file'>
-  <%= render 'image_subjects/form' %>
+  <div class="section-wrap">
+    <h2>Upload a file</h2>
+    <%= render 'image_subjects/form' %>
+  </div>
 </section>
 <section class="paste">
-  <%= render 'text_subjects/form' %>
+  <div class="section-wrap">
+    <h2>Paste some text</h2>
+    <%= render 'text_subjects/form' %>
+  </div>
 </section>
+<div class="or"><h3>OR</h3></div>
 
 <section class='history'>
   <h2>Your Discussions</h2>
