--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <ul class="user">
           <% if signed_in? %>
             <li class="dropdown">
-              <a class="user-menu" data-toggle='dropdown' href='#'><%= current_user.email %></a>
+              <a class="user-menu" href='#'><%= current_user.email %></a>
               <ul class="menu-content">
                 <li><%= link_to "Sign out", sign_out_path, :method => :delete %></li>
               </ul>
