--- a/app/views/text_subjects/_form.html.erb
+++ b/app/views/text_subjects/_form.html.erb
@@ -1,16 +1,16 @@
 <%= form_for @text_subject do |form| %>
   <%= render "shared/error_messages", :object => @text_subject %>
 
-  <div class='control-group'>
+  <div class='field'>
     <%= text_field_tag 'discussion_name', nil, placeholder: "Name your discussion" %>
   </div>
-  <div class='control-group'>
+  <div class='field'>
     <%= form.select :language, TextSubject::AVAILABLE_LANGUAGES %>
   </div>
-  <div class='control-group'>
+  <div class='field'>
     <%= form.text_area :content %>
   </div>
-  <div class='form-actions'>
+  <div class='action'>
     <%= form.submit 'Discuss', class: 'btn btn-primary' %>
   </div>
 <% end %>
