Add plain text option

--- a/app/views/text_subjects/_text_subject.html.erb
+++ b/app/views/text_subjects/_text_subject.html.erb
@@ -1,7 +1,9 @@
-<pre class='text-content'><code class='language-<%= text_subject.language.downcase %>'><%= text_subject.content %></code></pre>
+<pre class='text-content'><code class='language-<%= text_subject.language.parameterize %>'><%= text_subject.content %></code></pre>
 
-<% content_for :javascript do %>
-  <script>
-    hljs.initHighlightingOnLoad();
-  </script>
+<% unless text_subject.language == 'Plain Text' %>
+  <% content_for :javascript do %>
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
+  <% end %>
 <% end %>
