--- a/app/views/discussions/_chat.html.erb
+++ b/app/views/discussions/_chat.html.erb
@@ -3,6 +3,8 @@
   <% content_for :javascript do %>
     <script src="http://js.pusher.com/1.11/pusher.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+      $('#chat-container').scrollTop($('#messages').height());
+
       <% if Rails.env.development? %>
         // Enable pusher logging - don't include this in production
         Pusher.log = function(message) {
@@ -19,6 +21,11 @@
         $("#messages").append(data.message);
         if(data.user_id == '<%= current_user.id %>') {
           $("#new_message")[0].reset();
+        }
+
+        var chat = document.getElementById('chat-container');
+        if((chat.clientHeight + chat.scrollTop + 72) >= chat.scrollHeight) {
+          chat.scrollTop = chat.scrollHeight;
         }
       });
 
