Long titles now get truncated with an ellipsis

--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -60,6 +60,9 @@ body.discussions-show {
 
       h2 {
         color: #333;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
       pre {
