--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,5 +1,5 @@
 <h1>Discepto</h1>
-<p>The best way to get feedback</p>
+<p data-role="description">The best way to get feedback</p>
 
 <section class="call-to-action">
   <%= link_to "Sign up", sign_up_path %><%= link_to "Sign in", sign_in_path %>
