Top nav bar styled Now links to your discussions underneath your username Now links to a new discussion

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,11 @@
         <%= link_to 'Discepto', root_path, class: 'brand' %>
         <ul class="user">
           <% if signed_in? %>
+          <li><%= link_to 'New Discussion', dashboard_path %></li>
             <li class="dropdown">
               <a class="user-menu" href='#'><%= current_user.email %></a>
               <ul class="menu-content">
+                <li><%= link_to "Your Discussions", discussions_path %></li>
                 <li><%= link_to "Sign out", sign_out_path, :method => :delete %></li>
               </ul>
             </li>
