--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,5 +1,11 @@
 body {
   min-width: $min-width;
+
+  a,
+  a:link,
+  a:visited {
+    color: #333;
+  }
 }
 
 header {
@@ -24,56 +30,58 @@ header {
       }
 
       ul.user {
-        @include position(absolute, 6px 15px 0 0);
+        @include position(absolute, 3px 15px 0 0);
 
-        li.dropdown {
-          a.user-menu {
+        a.user-menu {
+          display: block;
+          min-width: 130px;
+          padding-right: 17px;
+          position: relative;
+
+          &::before {
+            border-color: #333 transparent transparent transparent;
+            border-style: solid;
+            border-width: 4px;
+            content: "";
+            height: 0;
+            @include position(absolute, 8px 5px 0 0);
+            width: 0;
+          }
+        }
+
+        > li {
+          display: inline-block;
+          margin-left: 10px;
+
+          > a {
             border: 1px solid transparent;
-            color: #555;
+            border-radius: 4px;
+            padding: 2px 5px;
+            @include transition(all 0.2s ease-in-out);
+
+            &:hover {
+              border-color: #bbb;
+              @include linear-gradient(white, #eee);
+            }
+          }
+        }
+
+        ul.menu-content {
+          background: #ddd;
+          @include box-shadow(1px 1px 5px rgba(0,0,0,0.5));
+          display: none;
+          margin: 0;
+          @include position(absolute, 29px 0px 0 0);
+
+          li a {
+            display: block;
             padding: 5px 10px;
 
             &:hover {
-              border-color: #D0D0D0;
-              background: #fff;
-            }
-
-            &:active {
-              border-color: #BDBDBD;
-              @include box-shadow(inset 0 0 15px hsla(0, 0%, 0%, 0.15));
-            }
-          } // a.user-menu
-
-          &:hover {
-            ul.menu-content {
-              display: block;
+              background: white;
             }
           }
-
-          ul.menu-content {
-            border: 1px solid #D0D0D0;
-            background: #E3E3E3;
-            display: none;
-            margin: 3px 0 0 0;
-
-            &:hover {
-              border: 1px solid #B4B4B4;
-            }
-
-            li a {
-              color: #555;
-              display: block;
-              padding: 4px 10px;
-
-              &:hover {
-                background: #fff;
-              }
-
-              &:active {
-                @include box-shadow(inset 0 0 15px hsla(0, 0%, 0%, 0.15));
-              }
-            }
-          }
-        } // li.dropdown
+        }
       } // ul.user
     } // div.nav-wrap
   } // nav
