Cleaned up some things in the dashboard It's now apparent that you can drop files, even though that doesn't work yet

--- a/app/assets/stylesheets/_base-vars.css.scss
+++ b/app/assets/stylesheets/_base-vars.css.scss
@@ -8,6 +8,10 @@ $fg-max-columns: 12;
 $header-height: 50px;
 $min-width: 1000px;
 
+$font-size-tiny: 11px;
+$font-size-small: 12px;
 $font-size-base: 16px;
 $font-size-large: 20px;
 $font-size-huge: 30px;
+
+// Site colors
