--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,9 @@
 <section class='file'>
-  <div class="section-wrap">
-    <h2>Upload a file</h2>
-    <%= render 'image_subjects/form' %>
+  <div class="drop">
+    <div class="section-wrap">
+      <h2>Upload or drop a file</h2>
+      <%= render 'image_subjects/form' %>
+    </div>
   </div>
 </section>
 <section class="paste">
