--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -2,13 +2,9 @@ body.dashboards {
   div.main-wrap {
     min-height: 100%;
     min-width: $min-width;
-    @include position(fixed,  $header-height 0px 0px 0px);
+    @include position(fixed, $header-height 0px 0px 0px);
 
     div.section-wrap {
-      margin: 0 auto;
-      padding-top: 80px;
-      width: 300px;
-
       h2 {
         margin-bottom: 12px;
       }
@@ -16,8 +12,26 @@ body.dashboards {
       .field {
         margin-bottom: 12px;
 
-        input {
-          margin: 0;
+        label.file {
+          background: #fafafa;
+          border: 1px solid #bbb;
+          border-radius: 3px;
+          cursor: pointer;
+          font-size: $font-size-small;
+          overflow: hidden;
+          padding: 8px 9px;
+          position: relative;
+          z-index: 1;
+        }
+
+        input[type=file] {
+          height: 100%;
+          cursor: pointer;
+          display: inline;
+          opacity: 0;
+          @include position(absolute, 0px 0px 0px 0px);
+          width: auto;
+          z-index: 2;
         }
       }
     } // div.section-wrap
@@ -25,10 +39,62 @@ body.dashboards {
     section.file {
       border-right: 1px solid #bbb;
       @include position(absolute, 0px 50% 0px 0px);
+
+      div.drop {
+        border: 5px dashed #bbb;
+        border-radius: 37px;
+        margin: 35px auto 0;
+        padding: 40px 20px;
+        @include transition(all 1s ease-in-out);
+        width: 60%;
+
+        &.hovered {
+          background: #eee;
+        }
+
+        div.section-wrap {
+          margin: 0 auto;
+          width: 300px;
+        }
+      }
     }
 
     section.paste {
       @include position(absolute, 0px 0px 0px 50%);
+
+      div.section-wrap {
+        margin: 0 auto;
+        padding-top: 80px;
+        width: 300px;
+      }
+
+      select {
+        background: #fafafa;
+        border: 1px solid #bbb;
+        border-radius: 3px;
+        font-size: $font-size-small;
+        padding: 8px 9px;
+        position: relative;
+        -webkit-appearance: none;
+
+        &::before {
+          border-color: #666 transparent transparent transparent;
+          @include position(absolute, 10px 5px 0 0);
+        }
+
+        &::after {
+          border-color: transparent transparent #666 transparent;
+        }
+
+        &::before, &::after {
+          border-style: solid;
+          border-width: 4px;
+          content: "";
+          height: 0;
+          width: 0;
+          z-index: 10;
+        }
+      }
     }
 
     div.or {
