Give users in chat a unique class

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,1 +1,1 @@
-<li><strong><%= message.user_name %>:</strong> <%= message.content %></li>
+<li><strong class='user-number-<%= message.user_number %>'><%= message.user_name %>:</strong> <%= message.content %></li>
