--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,4 +1,4 @@
-<h1>Discepto</h1>
+<h1>Thoughts on This</h1>
 <p data-role="description">The best way to get feedback</p>
 
 <section class="call-to-action">
